tests/negative/diagnostics/stderr_only/input.ci
void main() {
    int[] values = [1, 2, 3];
    print(toString(arrayGet(values, 9)) + "\n");
}
